<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory     android:title="@string/pref_category_scores_title"
                            android:key="pref_key_scores_settings">
        <lineo.smarteam.preference.MyEditTextPreference
            android:title="@string/pref_title_win_score"
            android:inputType="numberSigned"
            android:maxLength="9"
            android:defaultValue="@integer/def_win_score"
            android:key="KEY_PREF_WIN_SCORE" >
        </lineo.smarteam.preference.MyEditTextPreference>
        <lineo.smarteam.preference.MyEditTextPreference
            android:title="@string/pref_title_draw_score"
            android:inputType="numberSigned"
            android:maxLength="9"
            android:defaultValue="@integer/def_draw_score"
            android:key="KEY_PREF_DRAW_SCORE" >
        </lineo.smarteam.preference.MyEditTextPreference>
        <lineo.smarteam.preference.MyEditTextPreference
            android:title="@string/pref_title_defeat_score"
            android:inputType="numberSigned"
            android:maxLength="9"
            android:defaultValue="@integer/def_defeat_score"
            android:key="KEY_PREF_DEFEAT_SCORE" >
        </lineo.smarteam.preference.MyEditTextPreference>
        <lineo.smarteam.preference.MyEditTextPreference
            android:title="@string/pref_title_short_absence_score"
            android:inputType="numberSigned"
            android:maxLength="9"
            android:defaultValue="@integer/def_short_absence_score"
            android:key="KEY_PREF_SHORT_ABSENCE_SCORE" >
        </lineo.smarteam.preference.MyEditTextPreference>
        <lineo.smarteam.preference.MyEditTextPreference
            android:title="@string/pref_title_medium_absence_score"
            android:inputType="numberSigned"
            android:maxLength="9"
            android:defaultValue="@integer/def_medium_absence_score"
            android:key="KEY_PREF_MEDIUM_ABSENCE_SCORE" >
        </lineo.smarteam.preference.MyEditTextPreference>
        <lineo.smarteam.preference.MyEditTextPreference
            android:title="@string/pref_title_long_absence_score"
            android:inputType="numberSigned"
            android:maxLength="9"
            android:defaultValue="@integer/def_long_absence_score"
            android:key="KEY_PREF_LONG_ABSENCE_SCORE" >
        </lineo.smarteam.preference.MyEditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory     android:title="@string/pref_category_absences_title"
                            android:key="pref_key_absence_settings">
        <lineo.smarteam.preference.MyEditTextPreference
            android:title="@string/pref_title_medium_absence_duration"
            android:key="KEY_PREF_MEDIUM_ABSENCE_DURATION"
            android:inputType="number"
            android:maxLength="9"
            android:defaultValue="@integer/def_medium_absence_duration"
            android:summary="@string/pref_summary_medium_absence_duration" >
        </lineo.smarteam.preference.MyEditTextPreference>
        <lineo.smarteam.preference.MyEditTextPreference
            android:title="@string/pref_title_long_absence_duration"
            android:key="KEY_PREF_LONG_ABSENCE_DURATION"
            android:inputType="number"
            android:maxLength="9"
            android:defaultValue="@integer/def_long_absence_duration"
            android:summary="@string/pref_summary_long_absence_duration" >
        </lineo.smarteam.preference.MyEditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory     android:title="@string/pref_category_model_title"
                            android:key="pref_key_model_settings">
        <lineo.smarteam.preference.MyEditTextPreference
            android:title="@string/pref_title_k"
            android:key="KEY_PREF_K"
            android:inputType="numberDecimal"
            android:maxLength="9"
            android:defaultValue="@string/valueK"
            android:summary="@string/pref_summary_k" >
        </lineo.smarteam.preference.MyEditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory     android:title="@string/pref_category_default_title"
                            android:key="resetSettingsDialog">
        <lineo.smarteam.preference.ResetDefaultSettingsDialogPreference
            android:dialogMessage="@string/dialogRestoreDefault"
            android:key="KEY_PREF_DEFAULT"
            android:negativeButtonText="@android:string/no"
            android:persistent="false"
            android:positiveButtonText="@android:string/yes"
            android:summary="@string/pref_summary_default"
            android:title="@string/pref_title_restore_default" >
        </lineo.smarteam.preference.ResetDefaultSettingsDialogPreference>
    </PreferenceCategory>
</PreferenceScreen>