<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:gravity="center_vertical"
               android:background="@color/default_background"
               tools:context=".activity.StartActivity">
    <Button
        android:id="@+id/start_button_load"
        android:layout_width="match_parent"
        android:layout_height="@dimen/start_activity_button_height"
        android:layout_marginStart="@dimen/start_activity_left_right_margin"
        android:layout_marginEnd="@dimen/start_activity_left_right_margin"
        android:layout_marginBottom="@dimen/start_activity_inter_button_margin"
        android:background="@color/colorWhite"
        android:textColor="@color/colorGreenDark"
        android:text="@string/buttonStartMenuLoad"
        android:textSize="@dimen/start_activity_text_size"/>
    <Button
        android:id="@+id/start_button_create"
        android:layout_width="match_parent"
        android:layout_height="@dimen/start_activity_button_height"
        android:layout_marginStart="@dimen/start_activity_left_right_margin"
        android:layout_marginEnd="@dimen/start_activity_left_right_margin"
        android:layout_marginBottom="@dimen/start_activity_inter_button_margin"
        android:background="@color/colorWhite"
        android:textColor="@color/colorGreenDark"
        android:text="@string/buttonStartMenuCreate"
        android:textSize="@dimen/start_activity_text_size"/>
    <Button
        android:id="@+id/start_button_delete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/start_activity_button_height"
        android:layout_marginStart="@dimen/start_activity_left_right_margin"
        android:layout_marginEnd="@dimen/start_activity_left_right_margin"
        android:layout_marginBottom="@dimen/start_activity_inter_button_margin"
        android:background="@color/colorWhite"
        android:textColor="@color/colorGreenDark"
        android:text="@string/buttonStartMenuDelete"
        android:textSize="@dimen/start_activity_text_size"/>
    <Button
        android:id="@+id/start_button_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/start_activity_button_height"
        android:layout_marginStart="@dimen/start_activity_left_right_margin"
        android:layout_marginEnd="@dimen/start_activity_left_right_margin"
        android:background="@color/colorWhite"
        android:textColor="@color/colorGreenDark"
        android:text="@string/buttonStartMenuSettings"
        android:textSize="@dimen/start_activity_text_size"/>
</LinearLayout >
