<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:gravity="center_vertical"
               android:background="@color/default_background"
               tools:context=".activity.StartActivity">
    <Button
        android:id="@+id/edit_button_rename_team"
        android:layout_width="match_parent"
        android:layout_height="@dimen/start_activity_button_height"
        android:layout_marginStart="@dimen/start_activity_left_right_margin"
        android:layout_marginEnd="@dimen/start_activity_left_right_margin"
        android:layout_marginBottom="@dimen/start_activity_inter_button_margin"
        android:background="@color/colorGreen"
        android:textColor="@color/colorWhite"
        android:text="@string/buttonEditRenameTeam"
        android:textSize="@dimen/start_activity_text_size"/>
    <Button
        android:id="@+id/edit_button_add_player"
        android:layout_width="match_parent"
        android:layout_height="@dimen/start_activity_button_height"
        android:layout_marginStart="@dimen/start_activity_left_right_margin"
        android:layout_marginEnd="@dimen/start_activity_left_right_margin"
        android:layout_marginBottom="@dimen/start_activity_inter_button_margin"
        android:background="@color/colorGreen"
        android:textColor="@color/colorWhite"
        android:text="@string/buttonEditAddPlayer"
        android:textSize="@dimen/start_activity_text_size"/>
    <Button
        android:id="@+id/edit_button_rename_player"
        android:layout_width="match_parent"
        android:layout_height="@dimen/start_activity_button_height"
        android:layout_marginStart="@dimen/start_activity_left_right_margin"
        android:layout_marginEnd="@dimen/start_activity_left_right_margin"
        android:layout_marginBottom="@dimen/start_activity_inter_button_margin"
        android:background="@color/colorGreen"
        android:textColor="@color/colorWhite"
        android:text="@string/buttonEditRenamePlayer"
        android:textSize="@dimen/start_activity_text_size"/>
    <Button
        android:id="@+id/edit_button_delete_player"
        android:layout_width="match_parent"
        android:layout_height="@dimen/start_activity_button_height"
        android:layout_marginStart="@dimen/start_activity_left_right_margin"
        android:layout_marginEnd="@dimen/start_activity_left_right_margin"
        android:background="@color/colorGreen"
        android:textColor="@color/colorWhite"
        android:text="@string/buttonEditDeletePlayer"
        android:textSize="@dimen/start_activity_text_size"/>
</LinearLayout >
