<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/default_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/ranking_margins"
        android:padding="@dimen/ranking_margins">
        <TextView android:id="@+id/ranking_header_position"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="center_horizontal|center_vertical"
                  android:background="@color/primaryColor"
                  android:textColor="@color/colorWhite"
                  android:maxLines="1"
                  android:text="@string/rankingHeaderRank"
                  android:textSize="@dimen/ranking_header_text_size"/>
        <TextView android:id="@+id/ranking_header_name"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="5"
                  android:layout_marginStart="@dimen/ranking_margins"
                  android:gravity="center_horizontal|center_vertical"
                  android:background="@color/primaryColor"
                  android:textColor="@color/colorWhite"
                  android:maxLines="1"
                  android:text="@string/rankingHeaderName"
                  android:textSize="@dimen/ranking_header_text_size"/>
        <TextView android:id="@+id/ranking_header_games"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:layout_marginStart="@dimen/ranking_margins"
                  android:gravity="center_horizontal|center_vertical"
                  android:background="@color/primaryColor"
                  android:textColor="@color/colorWhite"
                  android:maxLines="1"
                  android:text="@string/rankingHeaderGames"
                  android:textSize="@dimen/ranking_header_text_size"/>
        <TextView android:id="@+id/ranking_header_score"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:layout_marginStart="@dimen/ranking_margins"
                  android:gravity="center_horizontal|center_vertical"
                  android:background="@color/primaryColor"
                  android:textColor="@color/colorWhite"
                  android:maxLines="1"
                  android:text="@string/rankingHeaderScore"
                  android:textSize="@dimen/ranking_header_text_size"/>
    </LinearLayout>
    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/ranking_margins"
        android:dividerHeight="1dp"
        android:divider="@null"
        android:id="@android:id/list" />
</LinearLayout>